--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-firestore": "^0.9.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "shards-react": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
