--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^7.2.2",
-    "materialize-css": "^1.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -17,8 +17,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-firestore": "^0.9.0",
-    "redux-thunk": "^2.3.0",
-    "shards-react": "^1.0.3"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
